[package]
authors = ["Aaron Loyd <aloyd@cloudflare.com>"]
description = "A Quartz-like cron parser used as part of Cron Triggers in Cloudflare Workers"
edition = "2018"
license-file = "LICENSE"
name = "cfron"
repository = "https://github.com/cloudflare/cfron"
version = "0.1.0"

[[bench]]
harness = false
name = "cron"

[dependencies]
chrono = "0.4"
nom = "5.1"

[dev-dependencies]
criterion = "0.3"
